# screwmpc-experiments

./: .copier-answers.yml  .readthedocs.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
docs/api/: screwmpc_experiments.experiments.rst  screwmpc_experiments.launchers.rst  screwmpc_experiments.rst
src/screwmpc_experiments/: __init__.py
src/screwmpc_experiments/assets/: pivoting.xml  random.xml
src/screwmpc_experiments/experiments/: common.py  screwmpc.py
src/screwmpc_experiments/launchers/: __init__.py  pivoting.py  random.py  trigger_grasp.py
tests/: test_package.py  test_transforms.py
